# 02476-Machine-Learning-Operations

./: .env.example  .gitignore  README.md  data.dvc  data.py  pyproject.toml  report.html  spike_report.html  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: cml_data.yaml  linting.yaml  tests.yaml
configs/: evaluation.yaml  training.yaml
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: gcs-setup.md  mkdocs.yaml
docs/source/: index.md
gcp/: cloudbuild.yaml  train_config.yaml  vertex_ai_train_cloudbuild.yaml
profiler_logs/20260115_135724/: fit-pl_profiler.txt
reports/: README.md  report.py
reports/profiles/: prof.prof
src/toxic_comments/: api.py  data.py  data_drift.py  datamodule.py  evaluate.py  frontend.py  log_artifact.py  model.py  onnx_conversion.py  train.py
tests/: load_test_api.py  test_api.py  test_data.py  test_datamodule.py  test_model.py  test_tasks.py
