[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "toxic_comments"
version = "0.0.1"
description = "This project implements a transformer architecture with the purpose of classifying comments based on their toxicity."
authors = [
  { name = "Group 100", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=0.6.0,<3.0.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
    "typer==0.15.1",
]

[dependency-groups]
train = [
    # Core ML training packages
    "torch>=2.6.0",
    "pytorch-lightning>=2.6.0",
    "lightning>=2.6.0",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
    
    # Configuration and utilities
    "hydra-core>=1.3.2",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    
    # Data handling
    "pandas>=2.3.3",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    
    # Progress bars
    "tqdm>=4.67.1",

    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
dev = [
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==9.0.2",
    "ruff==0.14.11",
    "mkdocstrings-python==1.12.2",
    "snakeviz>=2.2.2",
    "pytest-mock>=3.10.0",
    "requests>=2.28.0",
    "httpx>=0.28.1",
    "kagglehub>=0.4.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "locust>=2.43.1",
]
backend = [
    "evidently>=0.7.20",
    "fastapi==0.115.6",
    "google-cloud-storage>=3.8.0",
    "uvicorn==0.40.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "scipy>=1.17.0",
]

frontend = [
    "requests>=2.32.5",
    "streamlit>=1.53.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
exclude = [
    "__init__.py",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "W", "D"]
ignore = ["D100", "D203", "D211", "D212", "D401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["test", "*/_remote_module_non_scriptable*", "/tmp/*",]

[tool.coverage.report]
show_missing = true

[project.scripts]
train = "toxic_comments.train:main"
